--- a/nagaumesh_portfolio/src/components/Achievement/Achievement.module.css
+++ b/nagaumesh_portfolio/src/components/Achievement/Achievement.module.css
@@ -27,7 +27,7 @@
 }
 
 .aboutImage {
-  width: 35%;
+  width: 45%;
 }
 
 .aboutItems {
@@ -65,9 +65,26 @@
 }
 
 .aboutItem p {
-  font-size: 25px;
+  font-size: 20px;
   margin-left: 8px;
 }
+
+.links {
+    width: 100%;
+    margin-top: 26px;
+    display: flex;
+    justify-content: space-around;
+  }
+  
+.link {
+    text-decoration: none;
+    color: var(--color-text);
+    font-size: 30px;
+    font-weight: 600;
+    border-radius: 100px;
+    background: var(--color-primary);
+    padding: 1px 22px;
+  }
 
 @media screen and (max-width: 830px) {
   .container {
