--- a/nagaumesh_portfolio/src/components/Contact/Contact.module.css
+++ b/nagaumesh_portfolio/src/components/Contact/Contact.module.css
@@ -50,15 +50,18 @@
   .container {
     flex-direction: column;
     gap: 23px;
+    align-items: center;
   }
 
   .text {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: medium;
   }
 
   .links {
     align-items: center;
+    font-size: medium;
   }
 }
