--- a/nagaumesh_portfolio/src/components/Hero/Hero.module.css
+++ b/nagaumesh_portfolio/src/components/Hero/Hero.module.css
@@ -103,6 +103,8 @@
 @media screen and (max-width: 830px) {
   .container {
     flex-direction: column-reverse;
+    margin-left:15px;
+    margin-right:15px;
   }
 
   .content {
