--- a/nagaumesh_portfolio/src/components/Achievement/Achievement.module.css
+++ b/nagaumesh_portfolio/src/components/Achievement/Achievement.module.css
@@ -28,7 +28,7 @@
 }
 
 .aboutImage {
-  width: 45%;
+  width: 30%;
 }
 
 .aboutItems {
@@ -45,6 +45,7 @@
   border-radius: 20px;
   list-style: none;
   padding: 25px;
+  margin-left: 20px;
   background-image: linear-gradient(
     90deg,
     rgba(165, 215, 232, 0.42) 0%,
@@ -80,7 +81,7 @@
 .link {
     text-decoration: none;
     color: var(--color-text);
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 600;
     border-radius: 100px;
     background: var(--color-primary);
