--- a/nagaumesh_portfolio/src/components/Experience/Experience.module.css
+++ b/nagaumesh_portfolio/src/components/Experience/Experience.module.css
@@ -42,9 +42,10 @@
   border-radius: 100%;                                    /* makes it circle */
   display: flex;
   align-items: center;
+  gap: 2px;
   justify-content: center;
-  width: 120px;
-  height: 120px;
+  width: 80px;
+  height: 80px;
   background-image: linear-gradient(
     90deg,
     rgba(165, 215, 232, 0.42) 0%,
@@ -60,7 +61,7 @@
 }
 
 .skillImageContainer img {
-  width: 75px;                                       
+  width: 60px;                                       
 }
 
 .skill p {
