--- a/nagaumesh_portfolio/src/components/Hero/Hero.module.css
+++ b/nagaumesh_portfolio/src/components/Hero/Hero.module.css
@@ -12,6 +12,11 @@
   user-select: none;
 }
 
+.buttonContainer {
+  display: flex; /* Display buttons horizontally */
+  gap: 20px; /* Add some space between buttons */
+}
+
 .content {
   display: flex;
   flex-direction: column;
@@ -46,7 +51,7 @@
   background-color: var(--color-primary);
   color: var(--color-text);
   border-radius: 100px;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 600;
   padding: 17px 26px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
@@ -57,9 +62,9 @@
   z-index: 1;
 
   animation-name: floating;
-  animation-duration: 3s;
+  animation-duration: 2s;
   animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
+  animation-timing-function:ease-in-out;
 }
 
 @keyframes floating {
